--- a/wp7-donor/Donor/MainPage.xaml
+++ b/wp7-donor/Donor/MainPage.xaml
@@ -30,7 +30,10 @@
             </controls:Panorama.Background>
 
             <!--Panorama item one-->
-            <controls:PanoramaItem Header="Меню">
+            <controls:PanoramaItem>
+                <controls:PanoramaItem.Header>
+                    <TextBlock Margin="0,-20,0,0" Text="Меню"/>
+                </controls:PanoramaItem.Header>
                 <StackPanel>
                     <TextBlock Margin="0,4" Text="Календарь" TextWrapping="Wrap" Name="CalendarMenuText"  Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="CalendarMenuText_Tap" />
                     <TextBlock Margin="0,4" Text="Станции" TextWrapping="Wrap" Name="StationsMenu" Style="{StaticResource PhoneTextExtraLargeStyle}" Tap="Stations_Tap" />
@@ -43,7 +46,10 @@
  
             <!--Panorama item two-->
             <!--Use 'Orientation="Horizontal"' to enable a panel that lays out horizontally-->
-            <controls:PanoramaItem Header="Планы">
+            <controls:PanoramaItem>
+                <controls:PanoramaItem.Header>
+                    <TextBlock Margin="0,-20,0,0" Text="Планы"/>
+                </controls:PanoramaItem.Header>
                 <!--Double line list with image placeholder and text wrapping-->
                 <ListBox Margin="0,0,-12,0" ItemsSource="{Binding Events.WeekItems}" Name="EventsList" SelectionChanged="EventsList_SelectionChanged" Loaded="EventsList_Loaded">
                     <ListBox.ItemTemplate>
@@ -59,7 +65,10 @@
                 </ListBox>
             </controls:PanoramaItem>
 
-            <controls:PanoramaItem Header="Новости">
+            <controls:PanoramaItem>
+                <controls:PanoramaItem.Header>
+                    <TextBlock Margin="0,-20,0,0" Text="Новости"/>
+                </controls:PanoramaItem.Header>
                 <!--Double line list with text wrapping-->
                 <ListBox Margin="0,0,-12,0" ItemsSource="{Binding Path=News.NewItems}" Name="NewsList" SelectionChanged="ListBox_SelectionChanged">
                     <ListBox.ItemTemplate>
@@ -72,9 +81,12 @@
                     </ListBox.ItemTemplate>
                 </ListBox>
             </controls:PanoramaItem>
-            
 
-            <controls:PanoramaItem Header="Профиль">
+
+            <controls:PanoramaItem>
+                <controls:PanoramaItem.Header>
+                    <TextBlock Margin="0,-20,0,0" Text="Профиль"/>
+                </controls:PanoramaItem.Header>
                 <StackPanel>
                 <StackPanel Name="LoginForm">
                                   <toolkit:PerformanceProgressBar HorizontalAlignment="Left" Height="8" Margin="0" VerticalAlignment="Top" IsIndeterminate="False" Width="460" Name="LoginLoadingBar" />
@@ -96,7 +108,7 @@
                     </StackPanel>
                     <StackPanel Margin="0,10">
                         <TextBlock Text="Группа крови" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                        <TextBlock Text="{Binding User.BloodGroup}" Name="ProfileBloodGroup" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                            <TextBlock Text="{Binding User.OutBloodGroup}" Name="ProfileBloodGroup" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
                     </StackPanel>
                     <StackPanel Margin="0,10">
                         <TextBlock Text="Записано кроводач" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
