--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -12,20 +12,41 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait"  Orientation="Portrait"
-    shell:SystemTray.IsVisible="False">
+    shell:SystemTray.IsVisible="False" Loaded="PhoneApplicationPage_Loaded">
 
     <!--LayoutRoot contains the root grid where all other page content is placed-->
     <Grid x:Name="LayoutRoot">
         <controls:Panorama>
-
+            <controls:Panorama.Title>
+                <TextBlock Text="{Binding Title}" Margin="0,80,0,0" FontSize="30"/>
+            </controls:Panorama.Title>
             <!--Panorama item one-->
             <controls:PanoramaItem Header="Основное">
-                <Grid/>
+                <Grid>
+                    <StackPanel>
+                        <TextBlock TextWrapping="Wrap" Text="Адрес" Style="{StaticResource PhoneTextTitle2Style}" />
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Adress}"/>
+                        <TextBlock TextWrapping="Wrap" Text="Телефон" Style="{StaticResource PhoneTextTitle2Style}"/>
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Phone}"/>
+                        <TextBlock Style="{StaticResource PhoneTextTitle2Style}" Text="{Binding RegionalRegistrationString}" TextWrapping="Wrap"/>
+                        <TextBlock Text="Сайт" Style="{StaticResource PhoneTextTitle2Style}" TextWrapping="Wrap"/>
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Url}"/>
+                    </StackPanel>
+                </Grid>
             </controls:PanoramaItem>
 
             <!--Panorama item two-->
             <controls:PanoramaItem Header="Для доноров">
-                <Grid/>
+                <Grid>
+                    <StackPanel>
+                        <TextBlock TextWrapping="Wrap" Text="Время приема" Style="{StaticResource PhoneTextTitle2Style}" />
+                        <TextBlock TextWrapping="Wrap" Text="{Binding ReceiptTime}"/>
+                        <TextBlock TextWrapping="Wrap" Text="Проезд" Style="{StaticResource PhoneTextTitle2Style}"/>
+                        <TextBlock TextWrapping="Wrap" Text="{Binding Transportaion}"/>
+                        <TextBlock TextWrapping="Wrap" Text="Кровь для" Style="{StaticResource PhoneTextTitle2Style}"/>
+                        <TextBlock Text="{Binding BloodFor}"/>
+                    </StackPanel>
+                </Grid>
             </controls:PanoramaItem>
 
             <controls:PanoramaItem Header="Объявления">
