--- a/wp7-donor/Donor/NewsList.xaml
+++ b/wp7-donor/Donor/NewsList.xaml
@@ -34,7 +34,7 @@
                         <DataTemplate>
                             <StackPanel Margin="0,0,0,17" Width="432" Height="78">
                                 <TextBlock Text="{Binding Title}" TextWrapping="Wrap" Style="{StaticResource PhoneTextExtraLargeStyle}"/>
-                                <TextBlock Text="{Binding Description}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>
+                                <!--<TextBlock Text="{Binding Body}" TextWrapping="Wrap" Margin="12,-6,12,0" Style="{StaticResource PhoneTextSubtleStyle}"/>-->
                             </StackPanel>
                         </DataTemplate>
                     </ListBox.ItemTemplate>
