--- a/wp7-donor/Donor/StationPage.xaml
+++ b/wp7-donor/Donor/StationPage.xaml
@@ -66,7 +66,21 @@
             </controls:PanoramaItem>
 
             <controls:PanoramaItem Header="Отзывы">
-                <Grid/>
+                <Grid>
+                    <ScrollViewer>
+                        <ListBox Name="StationReviews">
+                            <ListBox.ItemTemplate>
+                                <DataTemplate>
+                                    <StackPanel>
+                                        <TextBlock Text="{Binding Username}"/>
+                                        <TextBlock Text="{Binding Vote}"/>
+                                        <TextBlock Text="{Binding Body}"/>
+                                    </StackPanel>
+                                </DataTemplate>
+                            </ListBox.ItemTemplate>
+                        </ListBox>
+                    </ScrollViewer>
+                </Grid>
             </controls:PanoramaItem>
         </controls:Panorama>
     </Grid>
